2006-07-19  Patrick van Staveren  <trick@vanstaveren.us>

	* plugins/Recommendation/RecommendationPane.cs:
	double-escape comma, ampersand, and question mark like we
	do with slashes

2006-07-19  Aaron Bockover  <abock@gnome.org>

	* banshee-official-plugins.mds: Added Podcast project

	* plugins/Recommendation/Recommendation.mdp: Added new files

	* plugins/Recommendation/RecommendationUtilities.cs: Moved utility
	methods to a separate internal static class

	* plugins/Recommendation/RecommendationPlugin.cs: Minor fixes and
	clean up for QA/review

	* plugins/Recommendation/RecommendationPane.cs: More clean up and 
	refactoring; added 'no results' view for artists

	* plugins/Recommendation/Makefile.am: 
	* plugins/Podcast/Makefile.am: Updated build

	* plugins/Podcast/Podcast.mdp: Added MonoDevelop project for Podcast

2006-07-18  Aaron Bockover  <abock@gnome.org>

	* configure.ac: Recommendations plugin now requires CVS/0.11.x

2006-07-18  Aaron Bockover  <abock@gnome.org>

	* banshee-official-plugins.mds:
	* plugins/MiniMode/MiniMode.mdp:
	* plugins/Recommendation/Recommendation.mdp: Added MonoDevelop solution 
	and projects for MiniMode and Recommendation

	* plugins/MiniMode/Makefile.am
	* plugins/Recommendation/Makefile.am: Updated build

	* plugins/Radio/RadioSource.cs:
	* plugins/Recommendation/RecommendationPlugin.cs: tabs->spaces

	* plugins/Recommendation/RecommendationPane.cs: Use the new TileView/Tile 
	widgets in Banshee.Widgets to show similar artists; similar functionality 
	to new application browser in SLED 10

	* plugins/Recommendation/play.png: Removed

	* plugins/SmartPlaylists/Plugin.cs: 
	* plugins/Podcast/PodcastPlugin.cs:
	* plugins/Radio/RadioPlugin.cs: Do all interface setup in
	InterfaceInitialize
	
2006-07-11  Ruben Vermeersch  <ruben@Lambda1.be>

	* plugins/Radio/RadioSource.cs: Remove needless test to see if the user
	plugin dir exists.

2006-07-08  Gabriel Burt  <gabriel.burt@gmail.com>
