@@ -1,3 +1,12 @@
+2006-07-19  Dominik Meister  <meister@greenmail.ch>
+
+	* plugins/SmartPlaylists/Plugin.cs: Add menu for creating smart playlist
+	from search (BGO #348054).
+
+	* plugins/SmartPlaylists/Editor.cs: Add SetQueryFromSearch method that
+	takes the search query the user has entered and converts it into a
+	condition statement that the existing smart playlist logic can use.
+
 2006-07-19  Patrick van Staveren  <trick@vanstaveren.us>
 
 	* plugins/Recommendation/RecommendationPane.cs:
